k8s-kustomize/services/cart-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 5200
  selector:
    app: cart-api
