k8s-kustomize/services/cart-api/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: cart-api
spec:
  parentRefs:
  - kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /basket
    backendRefs:
    - name: cart-api
      port: 80
